
  * Use secure URI in debian/watch.
  * Move source package lintian overrides to debian/source.
  * Remove patches force-gcc-header-obj.diff, hurd-pathmax.diff, impl-
    path-hurd.diff, libcxxabi-arm-ehabi-fix.patch, libcxxabi-test-don-t-
    fail-extended-long-double.patch, revert-change-soname.diff, try-to-
    unbreak-thinlto.diff that are missing from debian/patches/series.

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 08 Dec 2019 21:02:49 +0100

llvm-toolchain-9 (1:9.0.1~+rc2-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Fix some paths, upstream moved from site-packages
    to dist-packages for python packages
  * Move yaml-bench from libclang-common-X.Y-dev to llvm-X.Y-tools where
    it belongs
    See http://lists.llvm.org/pipermail/llvm-dev/2019-December/137337.html
  * Add a project in the cmake-test to silent a warning
    (Closes: #945489)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 03 Dec 2019 07:56:16 +0100

llvm-toolchain-9 (1:9.0.1~+rc1-1~exp1) experimental; urgency=medium

  * New snapshot release

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 24 Nov 2019 14:51:29 +0100

llvm-toolchain-9 (1:9.0.0-5) UNRELEASED; urgency=medium

  [ Gianfranco Costamagna ]
  * Patch cmake files to disable the z3 support in Ubuntu
  * Simplify rules file to put -g1 everywhere

  [ Sylvestre Ledru ]
  * Add a project in the cmake-test to silent a warning (Closes: #945489)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 26 Nov 2019 09:24:38 +0100

llvm-toolchain-9 (1:9.0.0-4) unstable; urgency=medium

  [ Samuel Thibault ]
  * hurd-cxx-paths.diff: Re-introduce patch to find C++ headers.
  * hurd-EIEIO-undef.diff: Drop patch, already fixed a different way upstream.
  * hurd-pathmax.diff: Drop now-useless parts.

  [ Sylvestre Ledru ]
  * Add libz3-dev as dependencies on llvm-X.Y-dev (Closes: #943996)
  * Update build-dep libpfm4-dev to linux-any.
    Thanks to Samuel Thibault for the patch

  [ Gianfranco Costamagna ]