@@ -6,6 +6,7 @@ llvm-toolchain-9 (1:9.0.1~+rc2-1~exp2) UNRELEASED; urgency=medium
     path-hurd.diff, libcxxabi-arm-ehabi-fix.patch, libcxxabi-test-don-t-
     fail-extended-long-double.patch, revert-change-soname.diff, try-to-
     unbreak-thinlto.diff that are missing from debian/patches/series.
+  * Rely on pre-initialized dpkg-architecture variables.
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 08 Dec 2019 21:02:49 +0100
 
